--- a/package.json
+++ b/package.json
@@ -4,16 +4,23 @@
 	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
+		"cypress": "npx cypress open",
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
-		"prepare": "svelte-kit sync || echo ''",
+		"prepare": "npx husky install",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"format": "prettier --write .",
-		"lint": "prettier --check . && eslint .",
+		"lint": "prettier --check . && eslint . --fix",
 		"test:unit": "vitest",
 		"test": "npm run test:unit -- --run"
+	},
+	"lint-staged": {
+		"*.{js,ts,svelte,css,scss,md,tsx,html}": [
+			"npm run format",
+			"npm run lint"
+		]
 	},
 	"devDependencies": {
 		"@chromatic-com/storybook": "^3.2.5",
@@ -30,11 +37,14 @@
 		"@testing-library/svelte": "^5.2.4",
 		"@vitest/browser": "^3.0.8",
 		"@vitest/coverage-v8": "^3.0.8",
+		"dotenv": "^16.4.7",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^3.0.0",
 		"globals": "^16.0.0",
+		"husky": "^9.1.7",
 		"jsdom": "^26.0.0",
+		"lint-staged": "^15.4.3",
 		"playwright": "^1.51.0",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
@@ -46,5 +56,8 @@
 		"typescript-eslint": "^8.20.0",
 		"vite": "^6.0.0",
 		"vitest": "^3.0.0"
+	},
+	"dependencies": {
+		"cypress": "^14.1.0"
 	}
 }
