--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
 		"test": "npm run test:unit -- --run"
 	},
 	"lint-staged": {
-		"*.{js,ts,svelte,css,scss,md,tsx,html}": [
+		"src/**/*.{js,ts,svelte,css,html,md}": [
 			"npm run format",
 			"npm run lint"
+		],
+		"cypress/**/*.{js,ts}": [
+			"npm run format"
 		]
 	},
 	"devDependencies": {
@@ -40,6 +43,7 @@
 		"dotenv": "^16.4.7",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
+		"eslint-plugin-cypress": "^4.2.0",
 		"eslint-plugin-svelte": "^3.0.0",
 		"globals": "^16.0.0",
 		"husky": "^9.1.7",
