--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"@tailwindcss/vite": "^4.0.0",
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/svelte": "^5.2.4",
+		"@testing-library/user-event": "^14.6.1",
 		"@vitest/browser": "^3.0.8",
 		"@vitest/coverage-v8": "^3.0.8",
 		"dotenv": "^16.4.7",
