--- a/.github/workflows/push-to-dev.yml
+++ b/.github/workflows/push-to-dev.yml
@@ -39,6 +39,6 @@ jobs:
         run: npm run test
 
       - name: Run Cypress
-        run: npx start-server-and-test "npm run dev" http://localhost:3000 "npx cypress run"
+        run: npx start-server-and-test "npm run dev" http://localhost:3000 "npm run cypress:cli"
         env:
           VITE_PORT: 3000
