Fix package script error

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"type": "module",
 	"scripts": {
 		"cypress": "npx cypress open --config-file cypress.config.js",
-		"cypress:cli": "npm cypress run --config-file cypress.config.js",
+		"cypress:cli": "npx cypress run --config-file cypress.config.js",
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
