Fix missing extension on config

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
 	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
-		"cypress": "npx cypress open --config-file cypress.config.js",
-		"cypress:cli": "npx cypress run --config-file cypress.config.js",
+		"cypress": "npx cypress open --config-file cypress.config.ts",
+		"cypress:cli": "npx cypress run --config-file cypress.config.ts",
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
